chore: 更换cdn图片引入地址

--- a/source/_posts/总结/个人总结/2019.06 - 2022-07.md
+++ b/source/_posts/总结/个人总结/2019.06 - 2022-07.md
@@ -17,7 +17,7 @@ tags:
 
 整体回顾本年度大概做了哪些事。
 
-![loading](https://www.wangzevw.com/cdn-file/images/yuque_mind.jpeg)
+![loading](https://cn-sy1.rains3.com/cdn/images/yuque_mind.jpeg)
 
 ## 关键词：快速成长
 
