--- a/source/_posts/我的项目/桌面端开发工具/项目介绍.md
+++ b/source/_posts/我的项目/桌面端开发工具/项目介绍.md
@@ -51,22 +51,22 @@ tags:
 
 ## 图片
 
-![欢迎页面](https://www.wangzevw.com/cdn-file/images/image.3k7wazx9ha.webp)
+![欢迎页面](https://cn-sy1.rains3.com/cdn/images/image.3k7wazx9ha.webp)
 
-![首页](https://www.wangzevw.com/cdn-file/images/image.lyl6vzj1.webp)
+![首页](https://cn-sy1.rains3.com/cdn/images/image.lyl6vzj1.webp)
 
-![Node管理](https://www.wangzevw.com/cdn-file/images/image.4n7llvv3zq.webp)
+![Node管理](https://cn-sy1.rains3.com/cdn/images/image.4n7llvv3zq.webp)
 
-![安装Node](https://www.wangzevw.com/cdn-file/images/image.231r98vwy8.webp)
+![安装Node](https://cn-sy1.rains3.com/cdn/images/image.231r98vwy8.webp)
 
-![已经安装的Node](https://www.wangzevw.com/cdn-file/images/image.6pne9xv39s.webp)
+![已经安装的Node](https://cn-sy1.rains3.com/cdn/images/image.6pne9xv39s.webp)
 
-![镜像源](https://www.wangzevw.com/cdn-file/images/image.32humf03cq.webp)
+![镜像源](https://cn-sy1.rains3.com/cdn/images/image.32humf03cq.webp)
 
-![安装全局包](https://www.wangzevw.com/cdn-file/images/image.5fkh3mew3s.webp)
+![安装全局包](https://cn-sy1.rains3.com/cdn/images/image.5fkh3mew3s.webp)
 
-![git](https://www.wangzevw.com/cdn-file/images/image.7sn3ktth5u.webp)
+![git](https://cn-sy1.rains3.com/cdn/images/image.7sn3ktth5u.webp)
 
-![主题设置](https://www.wangzevw.com/cdn-file/images/image.lyl71441.webp)
+![主题设置](https://cn-sy1.rains3.com/cdn/images/image.lyl71441.webp)
 
-![菜单模式](https://www.wangzevw.com/cdn-file/images/image.2rv0t9ntpo.webp)
+![菜单模式](https://cn-sy1.rains3.com/cdn/images/image.2rv0t9ntpo.webp)
