--- a/source/_posts/总结/项目总结/中英文搜索按键回车事件冲突.md
+++ b/source/_posts/总结/项目总结/中英文搜索按键回车事件冲突.md
@@ -47,11 +47,11 @@ tags:
 
 ### 使用其他的输入法
 
-![使用其他的输入法](http://www.wangzevw.com/cdn-file/images/search_1.png)
+![使用其他的输入法](http://cn-sy1.rains3.com/cdn/images/search_1.png)
 
 ### windows 自带的输入法
 
-![自带的输入法](http://www.wangzevw.com/cdn-file/images/search_2.png)
+![自带的输入法](http://cn-sy1.rains3.com/cdn/images/search_2.png)
 
 > windows 自带的输入法，在这样的情况下会走请求， 还是有特殊符号的情况，如果在这样的情况下后端可能会报错；
 
