--- a/source/_posts/总结/项目总结/系统下单(重复单提示框)的异常.md
+++ b/source/_posts/总结/项目总结/系统下单(重复单提示框)的异常.md
@@ -28,7 +28,7 @@ tags:
 
 > 如果图片显示较小，可以点击图片放大查看!
 
-![下单提示异常](http://www.wangzevw.com/cdn-file/images/install_order_1.png)
+![下单提示异常](http://cn-sy1.rains3.com/cdn/images/install_order_1.png)
 
 ## 总结
 
@@ -38,4 +38,4 @@ tags:
 
 因为代码业务逻辑是公司内部的，这里就不方便展示了；会用一张图片展示效果；
 
-![最终效果](http://www.wangzevw.com/cdn-file/images/install_order_2.svg)
+![最终效果](http://cn-sy1.rains3.com/cdn/images/install_order_2.svg)
