--- a/source/_posts/我的项目/桌面端开发工具/常见问题.md
+++ b/source/_posts/我的项目/桌面端开发工具/常见问题.md
@@ -14,7 +14,7 @@ tags:
 
 > 那么检测到您还未配置对应的环境变量，需手动配置； [环境配置](/personal/dev-tools/env.html)
 
-![install](https://www.wangzevw.com/cdn-file/images/image.67xcldj0yr.webp)
+![install](https://cn-sy1.rains3.com/cdn/images/image.67xcldj0yr.webp)
 
 ## 切换镜像源未更新
 
