--- a/source/_posts/我的项目/桌面端开发工具/环境配置.md
+++ b/source/_posts/我的项目/桌面端开发工具/环境配置.md
@@ -15,11 +15,11 @@ tags:
 
 ## 自动安装
 
-![install](https://www.wangzevw.com/cdn-file/images/image.67xcldj0yr.webp)
+![install](https://cn-sy1.rains3.com/cdn/images/image.67xcldj0yr.webp)
 
 如果您还未安装`fnm`, 那么您可以点击按钮就行安装，点击之后会自动进行安装，如果您安装失败了，那么需要手动安装，具体安装方法可以参考[**fnm**](https://github.com/Schniz/fnm)
 
-![install](https://www.wangzevw.com/cdn-file/images/image.2vemr051xe.webp)
+![install](https://cn-sy1.rains3.com/cdn/images/image.2vemr051xe.webp)
 
 ## 手动安装
 
