up: 小版本升级

--- a/source/_posts/关于/版本升级.md
+++ b/source/_posts/关于/版本升级.md
@@ -23,6 +23,11 @@ tags:
 
 
 {% timeline 网站更新内容： %}
+<!-- timeline Version 4.0.1 更新内容 -->
+1. 本网站采用的图片存储于oss容器，原有的github图床不会再进行更新；
+2. 更新图片域名，增加安全性已经防火墙模式；
+3. 部分请求流量较高的图片还是使用github图床的形式引入；
+<!-- endtimeline -->
 
 <!-- timeline Version 4.0.0 更新内容 -->
 1. 采用`hexo`构建博客系统，不在使用原有的文档流系统；
