--- a/source/_posts/关于/版本升级.md
+++ b/source/_posts/关于/版本升级.md
@@ -39,7 +39,7 @@ tags:
 <!-- timeline Version 3.3.0 更新内容 -->
 1. 前端小册链接更新，访问之前的链接显示`404`
 2. 删除前端导航页面, 网站统计链接取消
-3. 项目`demos`页面删除, 删除相关依赖，用[web-demos](https://web-demos.wangzevw.com)进行访问
+3. 项目`demos`页面删除, 删除相关依赖，用[web-demos](https://wangxiaoze-view.github.io/web-demos/#button)进行访问
 4. 优化导航栏，侧边栏使用`自动更新`, 舍弃之前长代码配置
 5. **总结部分文档**放置`前端小册`
 <!-- endtimeline -->
