--- a/source/_posts/总结/技术调研/开发远程组件的实践.md
+++ b/source/_posts/总结/技术调研/开发远程组件的实践.md
@@ -21,7 +21,7 @@ tags:
 
 ![](https://cn-sy1.rains3.com/cdn/images/remote_components.3rbcu4xiz3.svg)
 
-涉及项目的地址为： [sim-admin](https://www.wangzevw.com/sim-admin#/fun/remote)
+涉及项目的地址为： [sim-admin](https://wangxiaoze-view.github.io/sim-admin/#/fun/remote)
 
 ## 实践方向
 
