--- a/source/_posts/我的项目/桌面端开发工具/项目介绍.md
+++ b/source/_posts/我的项目/桌面端开发工具/项目介绍.md
@@ -23,8 +23,8 @@ tags:
 
 ## 下载地址
 
-- [**mac 系统安装**](https://www.wangzevw.com/cdn-file/app/dev-tools/0.0.1/dev-tools_0.0.1_aarch64.dmg)
-- [**windows 系统安装**](https://www.wangzevw.com/cdn-file/app/dev-tools/0.0.1/dev-tools_0.0.1_x64-setup.exe)
+- [**mac 系统安装**](https://wangxiaoze-view.github.io/picx-images-hosting/app/dev-tools/0.0.1/dev-tools_0.0.1_aarch64.dmg)
+- [**windows 系统安装**](https://wangxiaoze-view.github.io/picx-images-hosting/app/dev-tools/0.0.1/dev-tools_0.0.1_x64-setup.exe)
 
 ## 开发进度
 
