--- a/source/_posts/我的项目/一键代码拉取项目模板/如何使用.md
+++ b/source/_posts/我的项目/一键代码拉取项目模板/如何使用.md
@@ -40,4 +40,4 @@ temp-pro create <项目名称>
 
 ---
 
-![图片展示](https://cn-sy1.rains3.com/cdn/images/image.51e0vc8itz.webp)
+![图片展示](https://wangxiaoze-view.github.io/picx-images-hosting/images/image.51e0vc8itz.webp)
