--- a/source/_posts/生活日志/生活/我的拿手好菜-红烧牛肉面.md
+++ b/source/_posts/生活日志/生活/我的拿手好菜-红烧牛肉面.md
@@ -36,4 +36,4 @@ tags:
 
 ## 来吧，展示
 
-![牛肉面](https://cn-sy1.rains3.com/cdn/images/life_food_1.jpeg)
+![牛肉面](https://wangxiaoze-view.github.io/picx-images-hosting/images/life_food_1.jpeg)
