--- a/source/_posts/关于/版本升级.md
+++ b/source/_posts/关于/版本升级.md
@@ -29,6 +29,7 @@ tags:
 3. ~~部分请求流量较高的图片还是使用github图床的形式引入；~~
 4. 网站非赢利性网站，故将网站成本降为最低，oss存储容器暂时不使用；
 5. **数据会从语雀进行导出，故使用其内置的图床；**
+6. 为降低成本, 确认最终的域名为`wangxiaoze.cn`，**2025-06-21`wangzevw.com`将不再使用**
 <!-- endtimeline -->
 
 <!-- timeline Version 4.0.0 更新内容 -->
