--- a/source/_posts/生活日志/小说/临终前的回溯/序章：生命之烛摇曳.md
+++ b/source/_posts/生活日志/小说/临终前的回溯/序章：生命之烛摇曳.md
@@ -1,30 +1,40 @@
 ---
-title: 小说-临终前的回溯-第一章：生命之烛摇曳
+title: 小说-临终前的回溯-序章：生命之烛摇曳
 abbrlink: ac64186d
 date: 2023-10-08 09:05:01
 categories:
   - 生活日志
 tags:
   - 小说
+  - 临终前的回溯
 ---
 
+# 序章：生命之烛摇曳
 
-该小说虚假构设，仅供娱乐。请勿代入现实。
+{% note danger flat %}
+该短片小说是<font style="color:rgb(60, 60, 67);">虚假构设，仅供娱乐。请勿代入现实。</font>
+{% endnote %}
 
-这篇短篇小说是老 w 为我提供的的一个小故事, 该小说讲尽了他这一生的人生，以及到暮年之后心中始终纠结的故事；
+该短篇小说是老 w 为我提供的一个小故事，讲述了他这一生以及暮年之后心中的牵挂：
 
-> 之前开始写文章的那段时间，发现自己珍惜想要的都在慢慢失去，也许到几年之后都没有了那种憧憬，于是我就以我生命即将结束的朦胧间，快速回忆自己的一生，虽然没有那种大起大落，也没有那种风风光光，只是作为普通人，其中有后悔，有悔恨，有遗憾，各种情绪的交织才能组成人的一生；慢慢的记录生活是为了防止那一天我突然想不起来，那就意味着我的生命即将终结，在病床上的朦胧间，我祈祷上天，如果给我一次重来的机会，我会珍惜所有，没有重生者的即视感，也没有穿越者的标配，有的只是一个即将结束生命的小老头；你透过带有黄昏光的窗户，回忆这一生，最后眼角带着泪水中永远的睡去...
+之前开始写文章的那段时间，发现自己珍惜想要的都在慢慢失去，也许到几年之后都没有了那种憧憬，于是我就以我生命即将结束的朦胧间，快速回忆自己的一生，虽然没有那种大起大落，也没有那种风风光光，只是作为普通人，其中有后悔，有悔恨，有遗憾，各种情绪的交织才能组成人的一生；慢慢的记录生活是为了防止那一天我突然想不起来，那就意味着我的生命即将终结，在病床上的朦胧间，我祈祷上天，如果给我一次重来的机会，我会珍惜所有，没有重生者的即视感，也没有穿越者的标配，有的只是一个即将结束生命的小老头；你透过带有黄昏光的窗户，回忆这一生，最后眼角带着泪水中永远的沉睡...
 
-开始了...
+开始了.....
 
-xxxx 年的下午，我接到了来自 xxxx 医院的电话，那边说： “老 w 在医院快不行了，他手机上只有你的电话，你赶紧来一趟吧!!”
+x 年的下午，你手机收到了来自医院的来电：“您好，老 w 在医院重症室，说是想要见见你，你赶紧来一趟吧。” 
 
-我听到这个消息之后我慌了，因为平时他也没和我说身体不舒服，到现在我都是不相信的，宁愿相信这是个玩笑；立马放下手上的工作，我在马路上打了一辆出租车就往医院敢去，在车上时不时的催促司机快些；
+起初我还以为是诈骗电话，还想的谁这么无聊，后来一想不太对劲儿，我就在官网上搜到了该电话信息。之前老王跟我提到过，“如果哪天我将要离开，请不必通知其他人，我只希望你能送送我...”
 
-我到病房中，看见他那没有精神的面貌以及无神的眼睛，我才发现他的病情已经跟严重了；为什么这么多年的好友不早点跟我说呢，我并没有埋怨他似乎这一刻他的心里比我还痛苦吧；我没多说走到窗前轻声跟他说，放心我来了；
+当时我还以为他要离开这个城市要求别的城市发展，直到那个电话我才明白那句话真正的含义。于是火急火燎的打的士便往医院赶去。
 
-迟疑了一会，他说话了： “很抱歉让你看到了我囧样，可不要笑话我”， “不会的！你应该早点告诉我你的状况，好在点改善一下啊” 过了一会“能在临终前能和你这个老友唠唠嗑，在路上我也不会有什么遗憾了” 为什么没有告诉我它的情况他没说话了，也许不想让我过度担心，也许有什么难言之隐。
+到了医院询问护士才知道，他的病情已经走向晚期就目前的医院手段并不能完全根治，之后就带我走向他的病房，走在门口我心口沉淀了一下，平时冷静的我到了门口就显得格外慌张，几分钟之后我进去了...
 
-他在临终前给我讲了一个不长不短的故事，这个故事也许在描写老 w 的一生：
+傍晚的夕阳的余晖衬托在他的脸上，显示格外的憔悴，瘦弱的身躯以及萎靡不振的精神，在他的脸上我似乎找不到了那个男孩儿。他那空洞无神的眼睛似乎没有了对生活的向往。看到他的样子心头不免心疼，当时的他可是高大威猛的男孩儿，那个在篮球场上来去自如的男孩去哪了？
 
-在一片静谧而庄重的病房中，生命之烛即将燃尽的老人——老 w，静静地躺在洁白的床单上。他的眼神不再如年轻时那般锐利，却沉淀着岁月赋予的深邃与宁静。医生和护士们在角落里默默关注，低声交谈着关于他病情的最后评估。此刻，老 w 的心跳声与呼吸声交织成一首生命的挽歌，而他的思绪则穿越时空，展开了一场临终前的回溯之旅。
+“你来了...很抱歉让你看到了我的囧样”
+
+“你应该早点告诉我你的情况的呀，这样也许还有调养的可能....”
+
+也许是不让我担心吧，也许是有什么难言之隐...
+
+他靠着病床跟我讲述了一个不长不短的故事....
