chore: 开启系列文章

--- a/source/_posts/生活日志/小说/临终前的回溯/第二章：调皮的童年.md
+++ b/source/_posts/生活日志/小说/临终前的回溯/第二章：调皮的童年.md
@@ -1,11 +1,11 @@
 ---
-title: 小说-临终前的回溯-第二章：调皮的童年
+title: 第二章：调皮的童年
 abbrlink: a34c0a34
 categories:
   - 生活日志
 tags:
   - 小说
-  - 临终前的回溯
+series: 临终前的回溯
 ---
 
 # 第二章：调皮的童年
