--- a/source/_posts/生活日志/小说/临终前的回溯/第一章：时光回溯.md
+++ b/source/_posts/生活日志/小说/临终前的回溯/第一章：时光回溯.md
@@ -1,13 +1,14 @@
 ---
-title: 小说-临终前的回溯-第一章：时光回溯
+title: 第一章：时光回溯
 abbrlink: 1c68241b
 date: 2023-10-08 09:05:01
 categories:
   - 生活日志
 tags:
   - 小说
-  - 临终前的回溯
+series: 临终前的回溯
 ---
+
 
 # 第一章：时光回溯
 
