fix: 修复图标显示异常问题

--- a/source/_posts/关于/版本升级.md
+++ b/source/_posts/关于/版本升级.md
@@ -23,6 +23,13 @@ tags:
 
 
 {% timeline 网站更新内容： %}
+<!-- timeline 下个版本功能预知 -->
+1. 考虑使用`七牛云`存储资源图片。
+2. 个人项目文档将会具体化。
+3. 部分博文重新整理分化。
+<!-- endtimeline -->
+
+
 <!-- timeline Version 4.0.1 更新内容 -->
 1. ~~本网站采用的图片存储于oss容器，原有的github图床不会再进行更新；~~
 2. ~~更新图片域名，增加安全性已经防火墙模式；~~
