style(_config.butterfly.yml): 优化配置文件格式
- 调整引号使用：统一使用双引号，确保配置项的一致性
- 移除多余空格：删除不必要的空格，提高配置文件的可读性
- 更新 CDN 提供商：将 third_party_provider 从 jsdelivr 改为 cdnjs

--- a/source/_posts/我的项目/日志上报插件/v2.md
+++ b/source/_posts/我的项目/日志上报插件/v2.md
@@ -1,7 +1,8 @@
 ---
-title: 我的项目-'@log-reporting/core - V2'
+title: 日志上报服务Version:2.0.0
 abbrlink: 7407fa48
 date: 2024-10-08 09:05:01
+series: 日志上报服务
 categories:
   - 我的项目
 tags:
