--- a/source/_posts/我的项目/桌面端开发工具/环境配置.md
+++ b/source/_posts/我的项目/桌面端开发工具/环境配置.md
@@ -1,17 +1,17 @@
 ---
-title:  我的项目-桌面端项目环境配置
+title: 我的项目-桌面端项目环境配置
 abbrlink: 80fd3486
 date: 2024-10-08 09:05:01
+series: 桌面端开发工具
 categories:
   - 我的项目
 tags:
   - 项目
 ---
+
 # 环境配置
 
-
 目前该软件还做不到一体化操作，有些环境需要手动配置；主要需要配置的是 node 相关环境变量
-
 
 ## 自动安装
 
