--- a/source/_posts/我的项目/桌面端开发工具/项目介绍.md
+++ b/source/_posts/我的项目/桌面端开发工具/项目介绍.md
@@ -2,11 +2,13 @@
 title: 我的项目-桌面端项目介绍
 abbrlink: 3fdfc9bb
 date: 2024-10-08 09:05:01
+series: 桌面端开发工具
 categories:
   - 我的项目
 tags:
   - 项目
 ---
+
 # dev-tools
 
 该项目是是`rust + vue`开发的桌面端项目，是前端可视化开发工具，当然此开发工具不同于平常的开发工具，是有利于自己的一款工具；
