--- a/source/_posts/我的项目/日志上报插件/v1.md
+++ b/source/_posts/我的项目/日志上报插件/v1.md
@@ -1,7 +1,8 @@
 ---
-title: 我的项目-log-reportingV1
+title: 日志上报服务Version:1.0.0
 abbrlink: 59c233b4
 date: 2024-10-08 09:05:01
+series: 日志上报服务
 categories:
   - 我的项目
 tags:
